<resources>
    <string name="app_name">大大健康</string>
    <string name="secretary_default_name">大大秘书</string>
    <string name="copy_right">Copyright © 2015 医通科技</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
       <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="cant_unfollow_xiaomishu">臣妾做不到啊！！</string>
    <string name="cant_unfollow_dadajiankang">友尽？不可能，我不信！</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_picture">图片</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="button_save">保存</string>
    <string name="search_header">S</string>
    <string name="new_message">您收到一条新的大大消息</string>
    <string name="new_incoming_messages">给你发来了%s条消息，快来看看吧!</string>
    <string name="new_messages">您收到%1$s位大大用户发来的%2$s条消息</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
      <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
      <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="PediatricsIOException">无法连接到网络，请检查网络配置</string>
    <string name="OthersException">未知错误</string>
    <string name="PediatricsParseException">服务器数据异常</string>
	<string name="loading">加载中...</string>
    <string name="login">登录</string>
    <string name="account_hint">手机号</string>
    <string name="nick_name">昵称</string>
    <string name="password_hint">密码</string>
    <string name="password">密码</string>
    <string name="register_password">密　码</string>
    <string name="register_entry">新用户注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_3rd_account">使用第三方登陆</string>
    <string name="register">注册</string>
    <string name="register_account_hint">请输入手机号码</string>
    <string name="register_password_hint">请输入6-18位密码</string>
    <string name="nick_hint">昵称请输入4-20个字符</string>
    <string name="nickname_limit_hint">有效长度：4-20个字符(2-10个汉字)</string>
    <string name="code_hint">验证码</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="re_get_code">重新获取</string>
    <string name="nick_containt_special_character">昵称中包含非法字符</string>
    <string name="input_error">请填写正确的账号和密码</string>
    <string name="register_tips">注册即视为同意</string>
    <string name="agreement">《大大健康用户协议》</string>
    <string name="mobile_number">手机号</string>
    <string name="new_password_hint">新密码</string>
    <string name="input_account_error">请填写正确的11位手机号</string>
    <string name="input_password_error">请填写正确的登录密码</string>
    <string name="input_code_error">请填写正确的验证码</string>
    <string name="reset_passwrod">重置密码</string>
    <string name="get_code_failed">获取验证码失败</string>
    <string name="get_code_success">获取验证码成功，请稍后查看短信</string>
    <string name="register_failed">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="login_failed">登录失败</string>
    <string name="login_type_error">您登录的帐号为机构帐号，请使用大大健康机构版登录</string>
    <string name="reset_password_failed">重置密码失败</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="login_guaid_message">登陆后您可与机构专家直接沟通</string>
    <string name="password_check_error">两次输入的新密码不一致</string>
    <string name="second">秒</string>
    <string name="tab_name_message">消息</string>
    <string name="tab_name_doctor">首页</string>
    <string name="tab_name_discovery">发现</string>
    <string name="tab_name_myprofile">我的</string>
    <string name="attend">关注</string>
    <string name="unattend">取消关注</string>
    <string name="addattend">加关注</string>
    <string name="product_outline">产品已下架，不能购买</string>
    <string name="activity_outline">活动已结束，不能参与</string>
    <string name="default_doctor_nickname">大大专家</string>
    <string name="doctor_detail">专家详情</string>
    <string name="fans">粉丝</string>
    <string name="consultation">咨询</string>
    <string name="article">文章</string>
    <string name="graphic_consultation">图文咨询</string>
    <string name="call_consultation">电话咨询</string>
    <string name="collect_product">收藏产品</string>
    <string name="unCollect">取消收藏</string>
    <string name="attend_user">关注商家</string>
    <string name="consulting_hour">坐诊时间</string>
    <string name="address">地址</string>
    <string name="operation_failed">操作失败</string>
    <string name="operation_succes">操作成功</string>
    <string name="attend_succes">已关注</string>
    <string name="unattend_succes">已取消关注</string>
    <string name="chat_service_is_unavlable">暂不提供图文咨询 </string>
    <string name="call_service_is_unavlable">暂不提供电话咨询 </string>
    <string name="price_free">免费</string>
    <string name="call_price">定价：%s元/分钟</string>
    <string name="call_price_free">定价：免费</string>
    <string name="call_price_quire">定价：查询中...</string>
    <string name="rest_money">余额：%d元</string>
    <string name="update_rest_money">余额：查询中...</string>
    <string name="call_tips">咨询电话平均时长5~10分钟</string>
    <string name="confirm_phone_num">请确保当前使用的大大健康账号绑定的是当前使用的手机号码</string>
    <string name="add_money">立即充值</string>
    <string name="insufficient_balance">对不起，你剩余电话咨询时间小于1分钟，请充值</string>
    <string name="doctor_busy">对不起，你呼叫的专家正忙，请稍后再试或咨询其他专家</string>
    <string name="doctor_offline">对不起，你呼叫的专家不在线，请稍后再试或咨询其他专家</string>
    <string name="doctor_begin_conversation">您好，很高兴为您服务！</string>
    <string name="mishu_begin_conversation">您好，请问有什么可以帮助您的？如果您有什么建议或意见，也欢迎告知我们，我们会更加努力的改善，谢谢！</string>
    <string name="default_city_name">北京</string>
    <string name="select_city">选择城市</string>
    <string name="get_avaliable_city_failed">获取热门城市列表失败，请稍后再试</string>
	<string name="drop_dowm">下拉刷新</string>
	<string name="release_update">释放更新</string>
	<string name="doing_update">加载中</string>
	<string name="update_time">更新于</string>
	<string name="no_more_data">无更多数据</string>
	<string name="no_data">暂无数据</string>
	<string name="search">搜索</string>
	<string name="history_search_keywords">历史搜索</string>
	<string name="hot_search_keywords">热门搜索</string>
	<string name="please_input_keywords">请输入机构专家、医院或症状来搜索</string>
	<string name="refresh">刷新</string>
	<string name="product_detail">产品详情</string>
	<string name="product_notice">购买须知</string>
	<string name="lesson_date">课程时间</string>
	<string name="activity_date">活动时间</string>
	<string name="service_date">服务时间</string>
	<string name="product_date">产品时间</string>
	<string name="buy_now">立即购买</string>
	<string name="join_now">立即报名</string>
	<string name="generate_order">提交订单</string>
	<string name="exchange_now">立即兑换</string>
	<string name="exchange">兑换</string>
	<string name="number">数量</string>
	<string name="confirm_pay">确认支付</string>
	<string name="pay">立即支付</string>
	<string name="online_pay">在线支付</string>
	<string name="account_balance">账户余额</string>
	<string name="balance_not_enough">账户余额不足</string>
	<string name="generate_order_failed">提交订单失败</string>
	<string name="pay_success">支付成功！</string>
	<string name="pay_result">支付结果</string>
	<string name="pay_success_notice">\t\t稍后大大秘书会发送订单结果通知，您也可以通过“我的订单”查看订单状态。</string>
	<string name="back_home">回首页</string>
	<string name="completed">已完成</string>
	<string name="order_date">下单时间：</string>
	<string name="order_number">数量：</string>
	<string name="order_total">总价：</string>
	<string name="editor">编辑</string>
	<string name="finished">完成</string>
	<string name="no_favorite_article">您还未收藏任何文章</string>
	<string name="reward_title">选择打赏金额</string>
	<string name="reward_success">打赏成功</string>
	<string name="reward_user">打赏用户</string>
	<string name="confirm">确认</string>
	<string name="confirm_order">确认订单</string>
	<string name="binding_mobile_phone">绑定手机</string>
	<string name="binding_mobile_failed">绑定手机失败，请稍后再试</string>
	<string name="binding_mobile_success">已绑定</string>
	<string name="about_us">关于我们</string>
	<string name="setting">设置</string>
	<string name="recharge">充值</string>
	<string name="account_details">账户明细</string>
	<string name="my_orders">我的订单</string>
	<string name="my_favorite">我的收藏</string>
	<string name="select_recharge_account">选择充值金额</string>
	<string name="no_account_details">暂无交易记录</string>
	<string name="get_account_details_failed">获取账户明细失败</string>
	<string name="profile_not_modify">你还没有修改个人信息，无法保存！</string>
	<string name="edit_portrait">修改头像</string>
	<string name="edit_password">修改密码</string>
	<string name="edit_age">修改状态</string>
	<string name="edit_lable">修改兴趣</string>
	<string name="select_age">选择状态</string>
	<string name="select_lable">选择状态</string>
	<string name="edit_nick_name">修改昵称</string>
	<string name="nick_cannot_empty">昵称不能为空</string>
	<string name="distinction">性别</string>
	<string name="city">城市</string>
	<string name="new_message_notify">新消息提醒</string>
	<string name="switch_new_message">接收新消息通知</string>
	<string name="switch_voice">声音</string>
	<string name="switch_vibration">震动</string>
	<string name="sound_from_loudspeaker">扬声器播放语音</string>
	<string name="auto_clear_cache">自动清理缓存</string>
	<string name="clear_cache">清理缓存</string>
	<string name="default_cache_size">0M</string>
	<string name="clean_cache_summary">清除用户信息、聊天记录及图片缓存等</string>
	<string name="setting_clear_doing">正在清理缓存…</string>
	<string name="setting_clear_success">缓存已清除</string>
	<string name="exit">退出登录</string>
	<string name="update_notice">非常抱歉，您需要更新应用才能继续使用</string>
	<string name="photo_camera">拍照</string>
	<string name="photo_album">从相册选择</string>
	<string name="no_sdcard_for_capture">SD卡不存在，不能拍照</string>
	<string name="record_time_too_short">录音时间太短</string>
	<string name="viewpager_indicator">%1$d/%2$d</string>
	<string name="old_password">原密码</string>
	<string name="new_password">新密码</string>
	<string name="new_password_check">确认新密码</string>
	<string name="fech_token_success">授权成功</string>
	<string name="fech_token_failed">授权失败</string>
	<string name="create_share_url_failed">创建分享链接失败，请稍后再试</string>
	<string name="select_share_content">选择分享内容</string>
	<string name="select_all">全选</string>
	<string name="share">分享</string>
	<string name="contact_number">客服：</string>
	<string name="contact_email">邮箱：admin@ieeton.com</string>
	<string name="company">北京医通科技有限责任公司</string>
	<string name="select_from_camera">拍照</string>
	<string name="select_from_album">从手机相册选择</string>
	<string name="order_processing">正在处理订单...</string>
	<string name="order_hint1">您可以通过我的订单查看进度</string>
	<string name="btn_str1">立即预约</string>
	<string name="btn_str3">我的订单</string>
</resources>