<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:orientation="vertical" >
    
	<Button 
	    android:id="@+id/camera"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/select_from_camera"
	    android:textColor="@color/ieeton_color_red"
	    android:background="@drawable/indent_button_red"
	    android:gravity="center"
	    android:layout_marginTop="10dp"
	    android:layout_weight="1"
	    />
	<Button 
	    android:id="@+id/album"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/select_from_album"
	    android:textColor="@color/ieeton_color_red"
	    android:background="@drawable/indent_button_red"
	    android:gravity="center"
	    android:layout_marginTop="10dp"
	    android:layout_weight="1"
	    />

	<Button 
	    android:id="@+id/cancel"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/cancel"
	    android:textColor="@color/color_white"
	    android:background="@drawable/btn_grey"
	    android:gravity="center"
	    android:layout_marginTop="20dp"
	    android:layout_marginBottom="10dp"
	    android:layout_weight="1"
	    />
				
</LinearLayout>