<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ieeton_color_list_bg"
    android:orientation="vertical" >
    
	<ImageView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/iv_icon"
	    android:layout_marginTop="100dp"
	    android:layout_gravity="center_horizontal"
	    android:src="@drawable/pay"
	    />
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/tv_str1"
	    android:textColor="@color/color_black"
	    android:textSize="18sp"
	    android:text="@string/order_processing"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="20dp"
	    />
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/tv_str2"
	    android:textColor="@color/color_black"
	    android:textSize="16sp"
	    android:text="@string/order_hint1"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="5dp"
	    />
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:orientation="horizontal"
	    android:layout_marginTop="30dp"
	    >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/btn_left"
	        android:textSize="16sp"
	        android:textColor="@color/ieeton_color_blue"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:background="@drawable/submit_button_1"
	        android:text="@string/btn_str1"
	        android:gravity="center"
	        />
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/btn_right"
	        android:textSize="16sp"
	        android:textColor="@color/color_white"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:background="@drawable/submit_button_2"
	        android:text="@string/btn_str3"
	        android:layout_marginLeft="10dp"
	        android:gravity="center"
	        />
	</LinearLayout>
</LinearLayout>
